# cpp-template

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  TODO.org  main.cpp
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
cmake/toolchains/: archlinux-x86-gcc.cmake  linux-x86-gcc-debug.cmake  linux-x86-gcc-release.cmake
docs/: CMakeLists.txt  CMakePresets.json  Doxyfile
include/cpptemplate/: cpptemplate.hpp
source/cpptemplate/: cpptemplate.cpp
tests/: CMakeLists.txt  CMakePresets.json
tests/cmake/toolchains/: linux-x86-gcc-debug.cmake
tests/source/: random_tests.cpp
